# qt-creator

./: .gitignore
src/plugins/: .gitignore  CMakeLists.txt
src/plugins/codebooster/: CMakeLists.txt  CodeBooster.json.in  askcodeboostertaskhandler.cpp  askcodeboostertaskhandler.h  codebooster.qrc  codeboosterclient.cpp  codeboosterclient.h  codeboosterclientinterface.cpp  codeboosterclientinterface.h  codeboosterconstants.h  codeboosterhoverhandler.cpp  codeboosterhoverhandler.h  codeboostericons.h  codeboosteroptionspage.cpp  codeboosteroptionspage.h  codeboosterplugin.cpp  codeboosterplugin.h  codeboosterprojectpanel.cpp  codeboosterprojectpanel.h  codeboostersettings.cpp  codeboostersettings.h  codeboostersuggestion.cpp  codeboostersuggestion.h  codeboostertr.h  codeboosterutils.cpp  codeboosterutils.h  promptbuilder.cpp  promptbuilder.h  replyparser.cpp  replyparser.h  widgetcover.cpp  widgetcover.h  widgettheme.cpp  widgettheme.h
src/plugins/codebooster/chatsidebar/: chatsessionwgt.cpp  chatsessionwgt.h  chatsessionwgt.ui  chatview.cpp  chatview.h  chatview.ui  chatviewfactory.cpp  chatviewfactory.h  customlinewidget.h  inputwidget.cpp  inputwidget.h  instrumentor.h  sliderindicator.cpp  sliderindicator.h
src/plugins/codebooster/chatsidebar/markdownpreview/: codetohtmlconverter.cpp  markdownhtmlconverter.cpp  markdownhtmlconverter.h  markdownpreview.pri  markdownpreviewsetting.cpp  markdownpreviewsetting.h  messagepreviewwidget.cpp  messagepreviewwidget.h  misc.cpp  misc.h  notepreviewwidget.cpp  notepreviewwidget.h  qownlanguagedata.cpp  resource.qrc  schema.cpp  schema.h  schemes.conf
src/plugins/codebooster/chatsidebar/md4c/: md4c-html.c  md4c.c  md4c.h
src/plugins/codebooster/requests/: getcompletions.h
src/plugins/copilot/: copilotclient.cpp
src/plugins/texteditor/: texteditor.cpp
